; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_exp_var.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_exp_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_21__ = type { i32, i64, i32 }

@NUMERIC_MAX_RESULT_SCALE = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_NUMERIC_VALUE_OUT_OF_RANGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"value overflows numeric format\00", align 1
@const_two = common dso_local global %struct.TYPE_21__ zeroinitializer, align 8
@const_one = common dso_local global %struct.TYPE_21__ zeroinitializer, align 8
@DEC_DIGITS = common dso_local global i32 0, align 4
@NUMERIC_MIN_DISPLAY_SCALE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_21__*, %struct.TYPE_21__*, i32)* @exp_var to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exp_var(%struct.TYPE_21__* %0, %struct.TYPE_21__* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_21__*, align 8
  %5 = alloca %struct.TYPE_21__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_21__, align 8
  %8 = alloca %struct.TYPE_21__, align 8
  %9 = alloca %struct.TYPE_21__, align 8
  %10 = alloca double, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_21__, align 8
  store %struct.TYPE_21__* %0, %struct.TYPE_21__** %4, align 8
  store %struct.TYPE_21__* %1, %struct.TYPE_21__** %5, align 8
  store i32 %2, i32* %6, align 4
  %16 = call i32 @init_var(%struct.TYPE_21__* %7)
  %17 = call i32 @init_var(%struct.TYPE_21__* %8)
  %18 = call i32 @init_var(%struct.TYPE_21__* %9)
  %19 = load %struct.TYPE_21__*, %struct.TYPE_21__** %4, align 8
  %20 = call i32 @set_var_from_var(%struct.TYPE_21__* %19, %struct.TYPE_21__* %7)
  %21 = call double @numericvar_to_double_no_overflow(%struct.TYPE_21__* %7)
  store double %21, double* %10, align 8
  %22 = load double, double* %10, align 8
  %23 = call double @Abs(double %22)
  %24 = load i32, i32* @NUMERIC_MAX_RESULT_SCALE, align 4
  %25 = mul nsw i32 %24, 3
  %26 = sitofp i32 %25 to double
  %27 = fcmp oge double %23, %26
  br i1 %27, label %28, label %34

28:                                               ; preds = %3
  %29 = load i32, i32* @ERROR, align 4
  %30 = load i32, i32* @ERRCODE_NUMERIC_VALUE_OUT_OF_RANGE, align 4
  %31 = call i32 @errcode(i32 %30)
  %32 = call i32 @errmsg(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %33 = call i32 @ereport(i32 %29, i32 %32)
  br label %34

34:                                               ; preds = %28, %3
  %35 = load double, double* %10, align 8
  %36 = fmul double %35, 0x3FDBCB7B1526E511
  %37 = fptosi double %36 to i32
  store i32 %37, i32* %11, align 4
  %38 = load double, double* %10, align 8
  %39 = call double @Abs(double %38)
  %40 = fcmp ogt double %39, 1.000000e-02
  br i1 %40, label %41, label %64

41:                                               ; preds = %34
  %42 = call i32 @init_var(%struct.TYPE_21__* %15)
  %43 = call i32 @set_var_from_var(%struct.TYPE_21__* @const_two, %struct.TYPE_21__* %15)
  store i32 1, i32* %12, align 4
  %44 = load double, double* %10, align 8
  %45 = fdiv double %44, 2.000000e+00
  store double %45, double* %10, align 8
  br label %46

46:                                               ; preds = %50, %41
  %47 = load double, double* %10, align 8
  %48 = call double @Abs(double %47)
  %49 = fcmp ogt double %48, 1.000000e-02
  br i1 %49, label %50, label %56

50:                                               ; preds = %46
  %51 = load i32, i32* %12, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %12, align 4
  %53 = load double, double* %10, align 8
  %54 = fdiv double %53, 2.000000e+00
  store double %54, double* %10, align 8
  %55 = call i32 @add_var(%struct.TYPE_21__* %15, %struct.TYPE_21__* %15, %struct.TYPE_21__* %15)
  br label %46

56:                                               ; preds = %46
  %57 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %7, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = load i32, i32* %12, align 4
  %60 = add nsw i32 %58, %59
  store i32 %60, i32* %14, align 4
  %61 = load i32, i32* %14, align 4
  %62 = call i32 @div_var_fast(%struct.TYPE_21__* %7, %struct.TYPE_21__* %15, %struct.TYPE_21__* %7, i32 %61, i32 1)
  %63 = call i32 @free_var(%struct.TYPE_21__* %15)
  br label %65

64:                                               ; preds = %34
  store i32 0, i32* %12, align 4
  br label %65

65:                                               ; preds = %64, %56
  %66 = load i32, i32* %11, align 4
  %67 = add nsw i32 1, %66
  %68 = load i32, i32* %6, align 4
  %69 = add nsw i32 %67, %68
  %70 = load i32, i32* %12, align 4
  %71 = sitofp i32 %70 to double
  %72 = fmul double %71, 0x3FD34413509F79FB
  %73 = fptosi double %72 to i32
  %74 = add nsw i32 %69, %73
  store i32 %74, i32* %13, align 4
  %75 = load i32, i32* %13, align 4
  %76 = call i32 @Max(i32 %75, i32 0)
  %77 = add nsw i32 %76, 8
  store i32 %77, i32* %13, align 4
  %78 = load i32, i32* %13, align 4
  %79 = sub nsw i32 %78, 1
  store i32 %79, i32* %14, align 4
  %80 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %81 = call i32 @add_var(%struct.TYPE_21__* @const_one, %struct.TYPE_21__* %7, %struct.TYPE_21__* %80)
  %82 = load i32, i32* %14, align 4
  %83 = call i32 @mul_var(%struct.TYPE_21__* %7, %struct.TYPE_21__* %7, %struct.TYPE_21__* %8, i32 %82)
  %84 = call i32 @set_var_from_var(%struct.TYPE_21__* @const_two, %struct.TYPE_21__* %9)
  %85 = load i32, i32* %14, align 4
  %86 = call i32 @div_var_fast(%struct.TYPE_21__* %8, %struct.TYPE_21__* %9, %struct.TYPE_21__* %8, i32 %85, i32 1)
  br label %87

87:                                               ; preds = %91, %65
  %88 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %8, i32 0, i32 1
  %89 = load i64, i64* %88, align 8
  %90 = icmp ne i64 %89, 0
  br i1 %90, label %91, label %100

91:                                               ; preds = %87
  %92 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %93 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %94 = call i32 @add_var(%struct.TYPE_21__* %92, %struct.TYPE_21__* %8, %struct.TYPE_21__* %93)
  %95 = load i32, i32* %14, align 4
  %96 = call i32 @mul_var(%struct.TYPE_21__* %8, %struct.TYPE_21__* %7, %struct.TYPE_21__* %8, i32 %95)
  %97 = call i32 @add_var(%struct.TYPE_21__* %9, %struct.TYPE_21__* @const_one, %struct.TYPE_21__* %9)
  %98 = load i32, i32* %14, align 4
  %99 = call i32 @div_var_fast(%struct.TYPE_21__* %8, %struct.TYPE_21__* %9, %struct.TYPE_21__* %8, i32 %98, i32 1)
  br label %87

100:                                              ; preds = %87
  br label %101

101:                                              ; preds = %105, %100
  %102 = load i32, i32* %12, align 4
  %103 = add nsw i32 %102, -1
  store i32 %103, i32* %12, align 4
  %104 = icmp sgt i32 %102, 0
  br i1 %104, label %105, label %122

105:                                              ; preds = %101
  %106 = load i32, i32* %13, align 4
  %107 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %108 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %107, i32 0, i32 2
  %109 = load i32, i32* %108, align 8
  %110 = mul nsw i32 %109, 2
  %111 = load i32, i32* @DEC_DIGITS, align 4
  %112 = mul nsw i32 %110, %111
  %113 = sub nsw i32 %106, %112
  store i32 %113, i32* %14, align 4
  %114 = load i32, i32* %14, align 4
  %115 = load i32, i32* @NUMERIC_MIN_DISPLAY_SCALE, align 4
  %116 = call i32 @Max(i32 %114, i32 %115)
  store i32 %116, i32* %14, align 4
  %117 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %118 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %119 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %120 = load i32, i32* %14, align 4
  %121 = call i32 @mul_var(%struct.TYPE_21__* %117, %struct.TYPE_21__* %118, %struct.TYPE_21__* %119, i32 %120)
  br label %101

122:                                              ; preds = %101
  %123 = load %struct.TYPE_21__*, %struct.TYPE_21__** %5, align 8
  %124 = load i32, i32* %6, align 4
  %125 = call i32 @round_var(%struct.TYPE_21__* %123, i32 %124)
  %126 = call i32 @free_var(%struct.TYPE_21__* %7)
  %127 = call i32 @free_var(%struct.TYPE_21__* %8)
  %128 = call i32 @free_var(%struct.TYPE_21__* %9)
  ret void
}

declare dso_local i32 @init_var(%struct.TYPE_21__*) #1

declare dso_local i32 @set_var_from_var(%struct.TYPE_21__*, %struct.TYPE_21__*) #1

declare dso_local double @numericvar_to_double_no_overflow(%struct.TYPE_21__*) #1

declare dso_local double @Abs(double) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @add_var(%struct.TYPE_21__*, %struct.TYPE_21__*, %struct.TYPE_21__*) #1

declare dso_local i32 @div_var_fast(%struct.TYPE_21__*, %struct.TYPE_21__*, %struct.TYPE_21__*, i32, i32) #1

declare dso_local i32 @free_var(%struct.TYPE_21__*) #1

declare dso_local i32 @Max(i32, i32) #1

declare dso_local i32 @mul_var(%struct.TYPE_21__*, %struct.TYPE_21__*, %struct.TYPE_21__*, i32) #1

declare dso_local i32 @round_var(%struct.TYPE_21__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
